[package]
name = "lameboy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = "4.0.0"
log = "0.4"
clap = { version = "4.1.10", features = ["derive"] }
pixels = "0.13.0"
winit = "0.27"
winit_input_helper = "0.13"
imgui = "0.11"
imgui-winit-support = "0.11"

[dependencies.sdl2]
version = "0.36"
default-features = true
features = ["mixer"]

[dependencies.imgui-wgpu]
git = "https://github.com/Nelarius/imgui-wgpu-rs.git"
rev = "1cd675a79a605835c1ea996d68a943cd3c3b4af9"
